add support for multiple user roles